add testing program for FITS files

--- a/DL3-IRFs/notebooks/Test-DL3-IRFs-headers.ipynb
+++ b/DL3-IRFs/notebooks/Test-DL3-IRFs-headers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "82ae3090",
+   "id": "30db8ea8",
    "metadata": {},
    "source": [
     "# IRF Header comparision\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e515993b",
+   "execution_count": 4,
+   "id": "945ff087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,34 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "c9f3d747",
+   "execution_count": 15,
+   "id": "aff02bf0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# test IRFs\n",
-    "hdul = fits.open(\"../data/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.1.fits.gz\")\n",
+    "#hdul = fits.open(\"../data/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.1.fits.gz\")\n",
+    "hdul = fits.open(\"../tt.fits.gz\")\n",
+    "\n",
     "# ctools-converted IRFs\n",
     "q=fits.open(\"../data/ctools.fits.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "af8a69e6",
+   "execution_count": 16,
+   "id": "7ce35e90",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filename: ../data/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.1.fits.gz\n",
+      "Filename: ../tt.fits.gz\n",
       "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
       "  0  PRIMARY       1 PrimaryHDU       9   ()      \n",
       "  1  EFFECTIVE AREA    1 BinTableHDU     37   1R x 5C   [42E, 42E, 6E, 6E, 252E]   \n",
       "  2  POINT SPREAD FUNCTION    1 BinTableHDU     55   1R x 10C   [21E, 21E, 6E, 6E, 126E, 126E, 126E, 126E, 126E, 126E]   \n",
       "  3  ENERGY DISPERSION    1 BinTableHDU     40   1R x 7C   [300E, 300E, 300E, 300E, 6E, 6E, 540000E]   \n",
-      "  4  BACKGROUND    1 BinTableHDU     42   1R x 7C   [21E, 21E, 30E, 30E, 30E, 30E, 18900E]   \n"
+      "  4  BACKGROUND    1 BinTableHDU     43   1R x 7C   [21E, 21E, 60E, 60E, 60E, 60E, 75600E]   \n"
      ]
     }
    ],
@@ -62,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "0ebb38bc",
+   "execution_count": 17,
+   "id": "bebbd706",
    "metadata": {},
    "outputs": [
     {
@@ -86,26 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "374c88f8",
+   "execution_count": 18,
+   "id": "23f576e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XTENSION= 'BINTABLE'           / binary table extension                         BITPIX  =                    8 / 8-bit bytes                                    NAXIS   =                    2 / 2-dimensional binary table                     NAXIS1  =                 1392 / width of table in bytes                        NAXIS2  =                    1 / number of rows in table                        PCOUNT  =                    0 / size of special data area                      GCOUNT  =                    1 / one data group (required keyword)              TFIELDS =                    5 / number of fields in each row                   TTYPE1  = 'ENERG_LO'           / label for field   1                            TFORM1  = '42E     '           / data format of field: 4-byte REAL              TUNIT1  = 'TeV     '           / physical unit of field                         TTYPE2  = 'ENERG_HI'           / label for field   2                            TFORM2  = '42E     '           / data format of field: 4-byte REAL              TUNIT2  = 'TeV     '           / physical unit of field                         TTYPE3  = 'THETA_LO'           / label for field   3                            TFORM3  = '6E      '           / data format of field: 4-byte REAL              TUNIT3  = 'deg     '           / physical unit of field                         TTYPE4  = 'THETA_HI'           / label for field   4                            TFORM4  = '6E      '           / data format of field: 4-byte REAL              TUNIT4  = 'deg     '           / physical unit of field                         TTYPE5  = 'EFFAREA '           / label for field   5                            TFORM5  = '252E    '           / data format of field: 4-byte REAL              TUNIT5  = 'm**2    '           / physical unit of field                         EXTNAME = 'EFFECTIVE AREA'     / name of this binary table extension            TDIM5   = '(42,6)  '           / size of the multidimensional array             TELESCOP= 'CTA     '           / Name of telescope                              INSTRUME= 'Southern Array'     / Instrument                                     AUTHOR  = 'G.Maier '           / Author                                         ORIGIN  = 'CTAO    '           / Origin                                         DATE    = '2021-07-04T19:07:21' / File creation date (YYYY-MM-DDThh:mm:ss UTC)  HDUDOC  = 'https://github.com/open-gamma-ray-astro/gamma-astro-data-formats'    HDUVERS = '0.2     '           / HDU version                                    HDUCLASS= 'GADF    '           / HDUCLASS                                       HDUCLAS1= 'RESPONSE'           / HDUCLAS1                                       HDUCLAS2= 'EFF_AREA'           / HDUCLAS1                                       HDUCLAS3= 'FULL-ENCLOSURE'     / HDUCLAS3                                       HDUCLAS4= 'AEFF_2D '           / HDUCLAS4                                       END                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             \n"
+      "XTENSION= 'BINTABLE'           / binary table extension                         BITPIX  =                    8 / 8-bit bytes                                    NAXIS   =                    2 / 2-dimensional binary table                     NAXIS1  =               303528 / width of table in bytes                        NAXIS2  =                    1 / number of rows in table                        PCOUNT  =                    0 / size of special data area                      GCOUNT  =                    1 / one data group (required keyword)              TFIELDS =                    7 / number of fields in each row                   TTYPE1  = 'ENERG_LO'           / label for field   1                            TFORM1  = '21E     '           / data format of field: 4-byte REAL              TUNIT1  = 'TeV     '           / physical unit of field                         TTYPE2  = 'ENERG_HI'           / label for field   2                            TFORM2  = '21E     '           / data format of field: 4-byte REAL              TUNIT2  = 'TeV     '           / physical unit of field                         TTYPE3  = 'DETX_LO '           / label for field   3                            TFORM3  = '60E     '           / data format of field: 4-byte REAL              TUNIT3  = 'deg     '           / physical unit of field                         TTYPE4  = 'DETX_HI '           / label for field   4                            TFORM4  = '60E     '           / data format of field: 4-byte REAL              TUNIT4  = 'deg     '           / physical unit of field                         TTYPE5  = 'DETY_LO '           / label for field   5                            TFORM5  = '60E     '           / data format of field: 4-byte REAL              TUNIT5  = 'deg     '           / physical unit of field                         TTYPE6  = 'DETY_HI '           / label for field   6                            TFORM6  = '60E     '           / data format of field: 4-byte REAL              TUNIT6  = 'deg     '           / physical unit of field                         TTYPE7  = 'BKG     '           / label for field   7                            TFORM7  = '75600E  '           / data format of field: 4-byte REAL              TUNIT7  = 's^-1 MeV^-1 sr^-1'  / physical unit of field                         EXTNAME = 'BACKGROUND'         / name of this binary table extension            TDIM7   = '(21,60,60)'         / size of the multidimensional array             TELESCOP= 'CTA     '           / Name of telescope                              INSTRUME= 'Southern Array'     / Instrument                                     AUTHOR  = 'G.Maier '           / Author                                         ORIGIN  = 'CTAO    '           / Origin                                         DATE    = '2021-07-28T12:27:46' / File creation date (YYYY-MM-DDThh:mm:ss UTC)  HDUDOC  = 'https://github.com/open-gamma-ray-astro/gamma-astro-data-formats'    HDUVERS = '0.2     '           / HDU version                                    HDUCLASS= 'GADF    '           / HDUCLASS                                       HDUCLAS1= 'RESPONSE'           / HDUCLAS1                                       HDUCLAS3= 'FULL-ENCLOSURE'     / HDUCLAS3                                       HDUCLAS4= 'BKG_3D  '           / HDUCLAS4                                       FOVALIGN= 'ALTAZ   '           / FOV alignment                                  END                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             \n"
      ]
     }
    ],
    "source": [
-    "print(hdul[1].header)"
+    "print(hdul[4].header)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "146f14bb",
+   "id": "400e30b5",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c1bd803d",
+   "id": "9a5c1c41",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0346478f",
+   "id": "7bdd3f0b",
    "metadata": {},
    "outputs": [
     {
