--- a/DL3-IRFs/notebooks/Test-DL3-IRFs-headers.ipynb
+++ b/DL3-IRFs/notebooks/Test-DL3-IRFs-headers.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "945ff087",
    "metadata": {},
    "outputs": [],
@@ -25,22 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "aff02bf0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# test IRFs\n",
     "#hdul = fits.open(\"../data/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.1.fits.gz\")\n",
-    "hdul = fits.open(\"../tt.fits.gz\")\n",
+    "hdul = fits.open(\"/Users/maierg/DESYCloud/CTA/CTA-Science/Simulations/Public-Products/Public-IRFs/prod5-v0.2-IRFs/fits/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.2.fits.gz\")\n",
     "\n",
     "# ctools-converted IRFs\n",
-    "q=fits.open(\"../data/ctools.fits.gz\")"
+    "#q=fits.open(\"../data/ctools.fits.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "7ce35e90",
    "metadata": {},
    "outputs": [
@@ -48,13 +48,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filename: ../tt.fits.gz\n",
+      "Filename: /Users/maierg/DESYCloud/CTA/CTA-Science/Simulations/Public-Products/Public-IRFs/prod5-v0.2-IRFs/fits/Prod5-South-20deg-AverageAz-14MSTs37SSTs.180000s-v0.2.fits.gz\n",
       "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
       "  0  PRIMARY       1 PrimaryHDU       9   ()      \n",
       "  1  EFFECTIVE AREA    1 BinTableHDU     37   1R x 5C   [42E, 42E, 6E, 6E, 252E]   \n",
       "  2  POINT SPREAD FUNCTION    1 BinTableHDU     55   1R x 10C   [21E, 21E, 6E, 6E, 126E, 126E, 126E, 126E, 126E, 126E]   \n",
       "  3  ENERGY DISPERSION    1 BinTableHDU     40   1R x 7C   [300E, 300E, 300E, 300E, 6E, 6E, 540000E]   \n",
-      "  4  BACKGROUND    1 BinTableHDU     43   1R x 7C   [21E, 21E, 60E, 60E, 60E, 60E, 75600E]   \n"
+      "  4  BACKGROUND    1 BinTableHDU     44   1R x 7C   [21E, 21E, 60E, 60E, 60E, 60E, 75600E]   \n"
      ]
     }
    ],
@@ -64,21 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "bebbd706",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: ../data/ctools.fits.gz\n",
-      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
-      "  0  PRIMARY       1 PrimaryHDU       8   ()      \n",
-      "  1  EFFECTIVE AREA    1 BinTableHDU     53   1R x 5C   [42E, 42E, 6E, 6E, 252E]   \n",
-      "  2  POINT SPREAD FUNCTION    1 BinTableHDU     73   1R x 10C   [25E, 25E, 6E, 6E, 150E, 150E, 150E, 150E, 150E, 150E]   \n",
-      "  3  ENERGY DISPERSION    1 BinTableHDU     59   1R x 7C   [500E, 500E, 300E, 300E, 6E, 6E, 900000E]   \n",
-      "  4  BACKGROUND    1 BinTableHDU     59   1R x 7C   [36E, 36E, 36E, 36E, 21E, 21E, 27216E]   \n"
+     "ename": "NameError",
+     "evalue": "name 'q' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/7g/6gc4xbhx02l1bpb3fh7pjqn40000gn/T/ipykernel_4758/2302739837.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'q' is not defined"
      ]
     }
    ],
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "23f576e1",
    "metadata": {},
    "outputs": [
@@ -96,12 +94,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XTENSION= 'BINTABLE'           / binary table extension                         BITPIX  =                    8 / 8-bit bytes                                    NAXIS   =                    2 / 2-dimensional binary table                     NAXIS1  =               303528 / width of table in bytes                        NAXIS2  =                    1 / number of rows in table                        PCOUNT  =                    0 / size of special data area                      GCOUNT  =                    1 / one data group (required keyword)              TFIELDS =                    7 / number of fields in each row                   TTYPE1  = 'ENERG_LO'           / label for field   1                            TFORM1  = '21E     '           / data format of field: 4-byte REAL              TUNIT1  = 'TeV     '           / physical unit of field                         TTYPE2  = 'ENERG_HI'           / label for field   2                            TFORM2  = '21E     '           / data format of field: 4-byte REAL              TUNIT2  = 'TeV     '           / physical unit of field                         TTYPE3  = 'DETX_LO '           / label for field   3                            TFORM3  = '60E     '           / data format of field: 4-byte REAL              TUNIT3  = 'deg     '           / physical unit of field                         TTYPE4  = 'DETX_HI '           / label for field   4                            TFORM4  = '60E     '           / data format of field: 4-byte REAL              TUNIT4  = 'deg     '           / physical unit of field                         TTYPE5  = 'DETY_LO '           / label for field   5                            TFORM5  = '60E     '           / data format of field: 4-byte REAL              TUNIT5  = 'deg     '           / physical unit of field                         TTYPE6  = 'DETY_HI '           / label for field   6                            TFORM6  = '60E     '           / data format of field: 4-byte REAL              TUNIT6  = 'deg     '           / physical unit of field                         TTYPE7  = 'BKG     '           / label for field   7                            TFORM7  = '75600E  '           / data format of field: 4-byte REAL              TUNIT7  = 's^-1 MeV^-1 sr^-1'  / physical unit of field                         EXTNAME = 'BACKGROUND'         / name of this binary table extension            TDIM7   = '(21,60,60)'         / size of the multidimensional array             TELESCOP= 'CTA     '           / Name of telescope                              INSTRUME= 'Southern Array'     / Instrument                                     AUTHOR  = 'G.Maier '           / Author                                         ORIGIN  = 'CTAO    '           / Origin                                         DATE    = '2021-07-28T12:27:46' / File creation date (YYYY-MM-DDThh:mm:ss UTC)  HDUDOC  = 'https://github.com/open-gamma-ray-astro/gamma-astro-data-formats'    HDUVERS = '0.2     '           / HDU version                                    HDUCLASS= 'GADF    '           / HDUCLASS                                       HDUCLAS1= 'RESPONSE'           / HDUCLAS1                                       HDUCLAS3= 'FULL-ENCLOSURE'     / HDUCLAS3                                       HDUCLAS4= 'BKG_3D  '           / HDUCLAS4                                       FOVALIGN= 'ALTAZ   '           / FOV alignment                                  END                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             \n"
+      "XTENSION= 'BINTABLE'           / binary table extension                         BITPIX  =                    8 / 8-bit bytes                                    NAXIS   =                    2 / 2-dimensional binary table                     NAXIS1  =                 3240 / width of table in bytes                        NAXIS2  =                    1 / number of rows in table                        PCOUNT  =                    0 / size of special data area                      GCOUNT  =                    1 / one data group (required keyword)              TFIELDS =                   10 / number of fields in each row                   TTYPE1  = 'ENERG_LO'           / label for field   1                            TFORM1  = '21E     '           / data format of field: 4-byte REAL              TUNIT1  = 'TeV     '           / physical unit of field                         TTYPE2  = 'ENERG_HI'           / label for field   2                            TFORM2  = '21E     '           / data format of field: 4-byte REAL              TUNIT2  = 'TeV     '           / physical unit of field                         TTYPE3  = 'THETA_LO'           / label for field   3                            TFORM3  = '6E      '           / data format of field: 4-byte REAL              TUNIT3  = 'deg     '           / physical unit of field                         TTYPE4  = 'THETA_HI'           / label for field   4                            TFORM4  = '6E      '           / data format of field: 4-byte REAL              TUNIT4  = 'deg     '           / physical unit of field                         TTYPE5  = 'SCALE   '           / label for field   5                            TFORM5  = '126E    '           / data format of field: 4-byte REAL              TUNIT5  = 'sr^(-1) '           / physical unit of field                         TTYPE6  = 'SIGMA_1 '           / label for field   6                            TFORM6  = '126E    '           / data format of field: 4-byte REAL              TUNIT6  = 'deg     '           / physical unit of field                         TTYPE7  = 'SIGMA_2 '           / label for field   7                            TFORM7  = '126E    '           / data format of field: 4-byte REAL              TUNIT7  = 'deg     '           / physical unit of field                         TTYPE8  = 'SIGMA_3 '           / label for field   8                            TFORM8  = '126E    '           / data format of field: 4-byte REAL              TUNIT8  = 'deg     '           / physical unit of field                         TTYPE9  = 'AMPL_2  '           / label for field   9                            TFORM9  = '126E    '           / data format of field: 4-byte REAL              TTYPE10 = 'AMPL_3  '           / label for field  10                            TFORM10 = '126E    '           / data format of field: 4-byte REAL              EXTNAME = 'POINT SPREAD FUNCTION' / name of this binary table extension         TDIM5   = '(21,6)  '           / size of the multidimensional array             TDIM6   = '(21,6)  '           / size of the multidimensional array             TDIM7   = '(21,6)  '           / size of the multidimensional array             TDIM8   = '(21,6)  '           / size of the multidimensional array             TDIM9   = '(21,6)  '           / size of the multidimensional array             TDIM10  = '(21,6)  '           / size of the multidimensional array             TELESCOP= 'CTA     '           / Name of telescope                              INSTRUME= 'Southern Array'     / Instrument                                     AUTHOR  = 'G.Maier '           / Author                                         ORIGIN  = 'CTAO    '           / Origin                                         DATE    = '2022-04-29T08:43:49' / File creation date (YYYY-MM-DDThh:mm:ss UTC)  HDUDOC  = 'https://github.com/open-gamma-ray-astro/gamma-astro-data-formats'    HDUVERS = '0.2     '           / HDU version                                    HDUCLASS= 'GADF    '           / HDUCLASS                                       HDUCLAS1= 'RESPONSE'           / HDUCLAS1                                       HDUCLAS2= 'PSF     '           / HDUCLAS2                                       HDUCLAS3= 'FULL-ENCLOSURE'     / HDUCLAS3                                       HDUCLAS4= 'PSF_3GAUSS'         / HDUCLAS4                                       END                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             \n"
      ]
     }
    ],
    "source": [
-    "print(hdul[4].header)"
+    "print(hdul[2].header)"
    ]
   },
   {
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "9a5c1c41",
    "metadata": {},
    "outputs": [
@@ -134,21 +132,24 @@
        "ColDefs(\n",
        "    name = 'ENERG_LO'; format = '21E'; unit = 'TeV'\n",
        "    name = 'ENERG_HI'; format = '21E'; unit = 'TeV'\n",
-       "    name = 'DETX_LO'; format = '30E'; unit = 'deg'\n",
-       "    name = 'DETX_HI'; format = '30E'; unit = 'deg'\n",
-       "    name = 'DETY_LO'; format = '30E'; unit = 'deg'\n",
-       "    name = 'DETY_HI'; format = '30E'; unit = 'deg'\n",
-       "    name = 'BKG'; format = '18900E'; unit = 's^-1 MeV^-1 sr^-1'; dim = '(21,30,30)'\n",
+       "    name = 'THETA_LO'; format = '6E'; unit = 'deg'\n",
+       "    name = 'THETA_HI'; format = '6E'; unit = 'deg'\n",
+       "    name = 'SCALE'; format = '126E'; unit = 'sr^(-1)'; dim = '(21,6)'\n",
+       "    name = 'SIGMA_1'; format = '126E'; unit = 'deg'; dim = '(21,6)'\n",
+       "    name = 'SIGMA_2'; format = '126E'; unit = 'deg'; dim = '(21,6)'\n",
+       "    name = 'SIGMA_3'; format = '126E'; unit = 'deg'; dim = '(21,6)'\n",
+       "    name = 'AMPL_2'; format = '126E'; dim = '(21,6)'\n",
+       "    name = 'AMPL_3'; format = '126E'; dim = '(21,6)'\n",
        ")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdul[4].columns"
+    "hdul[2].columns"
    ]
   },
   {
@@ -179,11 +180,51 @@
    "source": [
     "q[4].columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cd0a7ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0.]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdul[2].data['AMPL_2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5eb0cba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
